--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 :root {
     --bg-color: #eeeeee;
     --fg-color1: #fff;
+
+    --font1: 'Starfish';
+    --font2: 'Source_Sans_Pro';
+    --font3: 'Playfair_Display';
 }
 
 body {
-    font-family: 'Source_Sans_Pro', sans-serif;
+    font-family: var(--font2);
 }
 
 
@@ -13,4 +17,37 @@ body {
     width: 27px;
     stroke: var(--fgcolor3);
     stroke-width: 2px;
+}
+
+
+
+.text-heading {
+    font-family: var(--font1);
+    font-size: 300%;
+    letter-spacing: 3px;
+    line-height: 210%;
+}
+.text-para {
+    font-family: var(--font2);
+    font-size: 100%;
+    line-height: 1.5;
+    font-weight: 400;
+}
+
+
+
+
+.btn {
+    padding: 12px 36px;
+    border: 3px solid;
+    border-color: pink;
+    width: fit-content;
+    font-family: var(--font2);
+}
+.btn p {
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font-size: 87%;
+    font-weight: 900;
+    color: pink;
 }
