--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,31 @@ body {
     font-weight: 900;
     color: pink;
 }
+
+
+
+
+
+.form2 {
+    display: flex;
+    border: 2px solid var(--fgcolor5);
+    width: fit-content;
+    padding: 6px;
+}
+.form2 > * {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.form2 .input {
+    width: 300px;
+    padding: 0 6px;
+}
+.form2 .input p {
+    font-size: 84%;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+.form2 .submit .icon {
+    width: 24px;
+}
